#50 s3 bucket and update stack

--- a/.aws/user/peof-circleci-user.yml
+++ b/.aws/user/peof-circleci-user.yml
@@ -14,11 +14,15 @@ Parameters:
 Resources:
   PEOFCircleCIUser:
     Type: AWS::IAM::User
+    Properties:
+      UserName: peof-circleci-user
 #    Properties:
 #      LoginProfile:
 #        Password: !Ref 'Password'
   PEOFCircleCIGroup:
     Type: AWS::IAM::Group
+    Properties:
+      GroupName: peof-circleci-users
   PEOFCircleCIUserToGroup:
     Type: AWS::IAM::UserToGroupAddition
     Properties:
