#50 mongo service with mongo express also works, just trying to get the content based routing between framework ui and mongo express working

--- a/.aws/ecs/dev/peof-dev-env.yml
+++ b/.aws/ecs/dev/peof-dev-env.yml
@@ -287,42 +287,110 @@ Resources:
                   - 'elasticloadbalancing:RegisterTargets'
                 Resource: '*'
 
+  # =====================
+  # Logs from containers
+  # =====================
+  CloudWatchLogsGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Ref AWS::StackName
+      RetentionInDays: 7
 
   # The task definition. This is a simple metadata description of what
   # container to run, and what resource requirements it has.
-#  MongoTaskDefinition:
-#    Type: AWS::ECS::TaskDefinition
-#    Properties:
-#      Family: mongo-task
-#      Cpu: 256
-#      Memory: 512
-#      ContainerDefinitions:
-#        # mongo express finds mongo with this container name
-#        - Name: mongo
-#          Cpu: 128
-#          Memory: 256
-#          #Image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-mongodb-dev:latest
-#          Image: mongo
-#          PortMappings:
-#            - ContainerPort: 27017
-#          LogConfiguration:
-#            LogDriver: awslogs
-#            Options:
-#              awslogs-group: !Ref CloudWatchLogsGroup
-#              awslogs-region: !Ref AWS::Region
-#        - Name: mongo-express
-#          Cpu: 128
-#          Memory: 256
-#          Image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-mongo-express-dev:latest
-#          PortMappings:
-#            - ContainerPort: 8081
-#              Protocol: HTTP
-#          LogConfiguration:
-#            LogDriver: awslogs
-#            Options:
-#              awslogs-group: !Ref CloudWatchLogsGroup
-#              awslogs-region: !Ref AWS::Region
+  MongoTaskDefinition:
+    Type: AWS::ECS::TaskDefinition
+    Properties:
+      Family: mongo-task
+      Cpu: 256
+      Memory: 512
+      ContainerDefinitions:
+        # mongo express finds mongo with this container name
+        - Name: mongo
+          Cpu: 128
+          Memory: 256
+          Image: registry.hub.docker.com/library/mongo:latest
+          PortMappings:
+            - ContainerPort: 27017
+          Environment:
+            - Name: MONGO_INITDB_ROOT_USERNAME
+              Value: root
+            - Name: MONGO_INITDB_ROOT_PASSWORD
+              Value: password
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref CloudWatchLogsGroup
+              awslogs-region: !Ref AWS::Region
+        - Name: mongo-express
+          Cpu: 128
+          Memory: 256
+          Image: registry.hub.docker.com/library/mongo-express:latest
+          PortMappings:
+            - ContainerPort: 8081
+              Protocol: http
+          Environment:
+            - Name: ME_CONFIG_MONGODB_ADMINUSERNAME
+              Value: root
+            - Name: ME_CONFIG_MONGODB_ADMINPASSWORD
+              Value: password
+            - Name: ME_CONFIG_SITE_BASEURL
+              Value: /mongo/
+          Links:
+            - mongo
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref CloudWatchLogsGroup
+              awslogs-region: !Ref AWS::Region
 
+  MongoService:
+    Type: AWS::ECS::Service
+    DependsOn: LoadBalancerRule
+    Properties:
+      ServiceName: mongo-service
+      Cluster: !Ref 'ECSCluster'
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 75
+      DesiredCount: 1
+      TaskDefinition: !Ref 'MongoTaskDefinition'
+      LoadBalancers:
+        - ContainerName: mongo-express
+          ContainerPort: 8081
+          TargetGroupArn: !Ref 'MongoTargetGroup'
+
+  MongoTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      HealthCheckIntervalSeconds: 6
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      Name: mongo-target-group
+      # The port on which the target is listening
+      Port: 8081
+      Protocol: HTTP
+      UnhealthyThresholdCount: 2
+      VpcId: !Ref 'VPC'
+
+  # Create a rule on the load balancer for routing traffic to the target group
+  MongoLoadBalancerRule:
+    Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Properties:
+      Actions:
+        - TargetGroupArn: !Ref 'MongoTargetGroup'
+          Type: 'forward'
+      Conditions:
+        - Field: path-pattern
+          Values: ["/mongo/*"]
+      ListenerArn: !Ref 'PublicLoadBalancerListener'
+      Priority: 2
+
+  # ==================
+  # Framework UI
+  # ==================
   FrameworkUiTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
@@ -343,31 +411,6 @@ Resources:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
 
-  CloudWatchLogsGroup:
-    Type: AWS::Logs::LogGroup
-    Properties:
-      LogGroupName: !Ref AWS::StackName
-      RetentionInDays: 7
-
-  # The service. The service is a resource which allows you to run multiple
-  # copies of a type of task, and gather up their logs and metrics, as well
-  # as monitor the number of running tasks and replace any that have crashed
-#  MongoService:
-#    Type: AWS::ECS::Service
-#    DependsOn: LoadBalancerRule
-#    Properties:
-#      ServiceName: mongo-service
-#      Cluster: !Ref 'ECSCluster'
-#      DeploymentConfiguration:
-#        MaximumPercent: 200
-#        MinimumHealthyPercent: 75
-#      DesiredCount: 1
-#      TaskDefinition: !Ref 'MongoTaskDefinition'
-#      LoadBalancers:
-#        - ContainerName: mongo-express
-#          ContainerPort: 8081
-#          TargetGroupArn: !Ref 'MongoTargetGroup'
-
   FrameworkUiService:
     Type: AWS::ECS::Service
     DependsOn: LoadBalancerRule
@@ -384,11 +427,6 @@ Resources:
           ContainerPort: 8080
           TargetGroupArn: !Ref 'FrameworkUiTargetGroup'
 
-  # A target group. This is used for keeping track of all the tasks, and
-  # what IP addresses / port numbers they have. You can query it yourself,
-  # to use the addresses yourself, but most often this target group is just
-  # connected to an application load balancer, or network load balancer, so
-  # it can automatically distribute traffic across all the targets.
   FrameworkUiTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -404,9 +442,6 @@ Resources:
       UnhealthyThresholdCount: 2
       VpcId: !Ref 'VPC'
 
-
-
-
   # Create a rule on the load balancer for routing traffic to the target group
   LoadBalancerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
@@ -416,9 +451,11 @@ Resources:
           Type: 'forward'
       Conditions:
         - Field: path-pattern
-          Values: ["*"]
+          Values: ["/framework/*"]
       ListenerArn: !Ref 'PublicLoadBalancerListener'
       Priority: 1
+
+
 
 # These are the values output by the CloudFormation template. Be careful
 # about changing any of them, because of them are exported with specific
