#50 peof dev environment mongo express can be reached but can not access to mongo

--- a/.aws/ecs/stage/peof-stage-env.yml
+++ b/.aws/ecs/stage/peof-stage-env.yml
@@ -177,7 +177,7 @@ Resources:
       Roles: [!Ref 'EC2Role']
 
   # Role for the EC2 hosts. This allows the ECS agent on the EC2 hosts
-  # to communciate with the ECS control plane, as well as download the docker
+  # to communicate with the ECS control plane, as well as download the docker
   # images from ECR to run on your host.
   EC2Role:
     Type: AWS::IAM::Role
@@ -454,8 +454,6 @@ Resources:
           Values: ["/framework/*"]
       ListenerArn: !Ref 'PublicLoadBalancerListener'
       Priority: 1
-
-
 
 # These are the values output by the CloudFormation template. Be careful
 # about changing any of them, because of them are exported with specific
