--- a/.aws/ecs/dev/peof-dev-env.yml
+++ b/.aws/ecs/dev/peof-dev-env.yml
@@ -1,151 +1,77 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Peof test environment stack
 Parameters:
-  DesiredCapacity:
-    Type: Number
-    Default: '3'
-    Description: Number of EC2 instances to launch in your ECS cluster.
-  MaxSize:
-    Type: Number
-    Default: '6'
-    Description: Maximum number of EC2 instances that can be launched in your ECS cluster.
+#  StackName:
+#    Type: String
+#    Default: peof-dev-env
+#    Description: The name of the parent Fargate networking stack that you created. Necessary
+#      to locate and reference resources created by that stack.
   ECSAMI:
     Description: AMI ID
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
     Default: /aws/service/ecs/optimized-ami/amazon-linux-2/recommended/image_id
-  InstanceType:
-    Description: EC2 instance type
-    Type: String
-    Default: t2.micro
-  StackName:
-    Type: String
-    Default: peof-dev-env
-    Description: The name of the parent cluster stack that you created. Necessary
-      to locate and reference resources created by that stack.
-Mappings:
-  SubnetConfig:
-    VPC:
-      CIDR: '10.0.0.0/16'
-    PublicOne:
-      CIDR: '10.0.0.0/24'
-    PublicTwo:
-      CIDR: '10.0.1.0/24'
 Resources:
-  VPC:
+  Vpc:
     Type: AWS::EC2::VPC
     Properties:
-      EnableDnsSupport: true
-      EnableDnsHostnames: true
-      CidrBlock: !FindInMap ['SubnetConfig', 'VPC', 'CIDR']
-
-  # Two public subnets, where containers can have public IP addresses
-  PublicSubnetOne:
+      CidrBlock: 10.0.0.0/16
+      EnableDnsSupport: 'true'
+      EnableDnsHostnames: 'true'
+  PubSubnet:
     Type: AWS::EC2::Subnet
     Properties:
+      VpcId: !Ref Vpc
+      CidrBlock: 10.0.0.0/24
       AvailabilityZone:
         Fn::Select:
           - 0
           - Fn::GetAZs: {Ref: 'AWS::Region'}
-      VpcId: !Ref 'VPC'
-      CidrBlock: !FindInMap ['SubnetConfig', 'PublicOne', 'CIDR']
       MapPublicIpOnLaunch: true
-  PublicSubnetTwo:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone:
-        Fn::Select:
-          - 1
-          - Fn::GetAZs: {Ref: 'AWS::Region'}
-      VpcId: !Ref 'VPC'
-      CidrBlock: !FindInMap ['SubnetConfig', 'PublicTwo', 'CIDR']
-      MapPublicIpOnLaunch: true
-
-  # Setup networking resources for the public subnets. Containers
-  # in the public subnets have public IP addresses and the routing table
-  # sends network traffic via the internet gateway.
   InternetGateway:
     Type: AWS::EC2::InternetGateway
-  GatewayAttachement:
+  AttachGateway:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
-      VpcId: !Ref 'VPC'
-      InternetGatewayId: !Ref 'InternetGateway'
-  PublicRouteTable:
+      VpcId: !Ref Vpc
+      InternetGatewayId: !Ref InternetGateway
+  RouteViaInternetGateway:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref 'VPC'
-  PublicRoute:
+      VpcId: !Ref Vpc
+  PublicRouteViaInternetGateway:
     Type: AWS::EC2::Route
-    DependsOn: GatewayAttachement
+    DependsOn: AttachGateway
     Properties:
-      RouteTableId: !Ref 'PublicRouteTable'
-      DestinationCidrBlock: '0.0.0.0/0'
-      GatewayId: !Ref 'InternetGateway'
-  PublicSubnetOneRouteTableAssociation:
+      RouteTableId: !Ref RouteViaInternetGateway
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId: !Ref InternetGateway
+  PubSubnetRouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
-      SubnetId: !Ref PublicSubnetOne
-      RouteTableId: !Ref PublicRouteTable
-  PublicSubnetTwoRouteTableAssociation:
-    Type: AWS::EC2::SubnetRouteTableAssociation
-    Properties:
-      SubnetId: !Ref PublicSubnetTwo
-      RouteTableId: !Ref PublicRouteTable
-
-  # ECS Resources
-  ECSCluster:
+      SubnetId: !Ref PubSubnet
+      RouteTableId: !Ref RouteViaInternetGateway
+  EcsCluster:
     Type: AWS::ECS::Cluster
-
-  # A security group for the EC2 hosts that will run the containers.
   EcsHostSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupDescription: Access to the ECS hosts that run containers
-      VpcId: !Ref 'VPC'
-  EcsSecurityGroupIngressFromPublicALB:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: Ingress from the public ALB
-      GroupId: !Ref 'EcsHostSecurityGroup'
-      IpProtocol: -1
-      SourceSecurityGroupId: !Ref 'PublicLoadBalancerSG'
-  EcsSecurityGroupIngressFromSelf:
-    Type: AWS::EC2::SecurityGroupIngress
-    Properties:
-      Description: Ingress from other hosts in the same security group
-      GroupId: !Ref 'EcsHostSecurityGroup'
-      IpProtocol: -1
-      SourceSecurityGroupId: !Ref 'EcsHostSecurityGroup'
-
-  # Autoscaling group. This launches the actual EC2 instances that will register
-  # themselves as members of the cluster, and run the docker containers.
-  ECSAutoScalingGroup:
-    Type: AWS::AutoScaling::AutoScalingGroup
-    Properties:
-      VPCZoneIdentifier:
-        - !Ref PublicSubnetOne
-        - !Ref PublicSubnetTwo
-      LaunchConfigurationName: !Ref 'ContainerInstances'
-      MinSize: '1'
-      MaxSize: !Ref 'MaxSize'
-      DesiredCapacity: !Ref 'DesiredCapacity'
-    CreationPolicy:
-      ResourceSignal:
-        Timeout: PT15M
-    UpdatePolicy:
-      AutoScalingReplacingUpdate:
-        WillReplace: 'true'
-  ContainerInstances:
+      VpcId: !Ref 'Vpc'
+      SecurityGroupIngress:
+        # Allow access to from anywhere on the internet
+        - CidrIp: 0.0.0.0/0
+          IpProtocol: -1
+  EcsInstanceLaunchConfiguration:
     Type: AWS::AutoScaling::LaunchConfiguration
     Properties:
       ImageId: !Ref 'ECSAMI'
+      InstanceType: m3.medium
+      AssociatePublicIpAddress: true
+      IamInstanceProfile: !Ref EC2InstanceProfile
       SecurityGroups: [!Ref 'EcsHostSecurityGroup']
-      InstanceType: !Ref 'InstanceType'
-      IamInstanceProfile: !Ref 'EC2InstanceProfile'
       UserData:
         Fn::Base64: !Sub |
           #!/bin/bash -xe
-          echo ECS_CLUSTER=${ECSCluster} >> /etc/ecs/ecs.config
+          echo ECS_CLUSTER=${EcsCluster} >> /etc/ecs/ecs.config
           yum install -y aws-cfn-bootstrap
           /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource ECSAutoScalingGroup --region ${AWS::Region}
   AutoscalingRole:
@@ -175,10 +101,6 @@ Resources:
     Properties:
       Path: /
       Roles: [!Ref 'EC2Role']
-
-  # Role for the EC2 hosts. This allows the ECS agent on the EC2 hosts
-  # to communciate with the ECS control plane, as well as download the docker
-  # images from ECR to run on your host.
   EC2Role:
     Type: AWS::IAM::Role
     Properties:
@@ -208,102 +130,40 @@ Resources:
                   - 'ecr:BatchGetImage'
                   - 'ecr:GetDownloadUrlForLayer'
                 Resource: '*'
-
-  # A public facing load balancer, this is used for accepting traffic from the public
-  # internet and directing it to public facing microservices
-  PublicLoadBalancerSG:
-    Type: AWS::EC2::SecurityGroup
+  EcsInstanceAutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
     Properties:
-      GroupDescription: Access to the public facing load balancer
-      VpcId: !Ref 'VPC'
-      SecurityGroupIngress:
-        # Allow access to ALB from anywhere on the internet
-        - CidrIp: 0.0.0.0/0
-          IpProtocol: -1
+      VPCZoneIdentifier:
+        - !Ref PubSubnet
+      LaunchConfigurationName: !Ref EcsInstanceLaunchConfiguration
+      MinSize: '1'
+      MaxSize: '3'
+      DesiredCapacity: '1'
+      Tags:
+        -
+          Key: Name
+          Value: !Sub "ECS Instance - ${AWS::StackName}"
+          PropagateAtLaunch: 'true'
+        -
+          Key: Description
+          Value: "This instance is the part of the Auto Scaling group which was created through ECS Console"
+          PropagateAtLaunch: 'true'
 
-  PublicLoadBalancer:
-    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
-    Properties:
-      Scheme: internet-facing
-      LoadBalancerAttributes:
-        - Key: idle_timeout.timeout_seconds
-          Value: '30'
-      Subnets:
-        # The load balancer is placed into the public subnets, so that traffic
-        # from the internet can reach the load balancer directly via the internet gateway
-        - !Ref PublicSubnetOne
-        - !Ref PublicSubnetTwo
-      SecurityGroups: [!Ref 'PublicLoadBalancerSG']
-
-  PublicLoadBalancerListener:
-    Type: AWS::ElasticLoadBalancingV2::Listener
-    DependsOn:
-      - PublicLoadBalancer
-    Properties:
-      DefaultActions:
-        - TargetGroupArn: !Ref 'FrameworkUiTargetGroup'
-          Type: 'forward'
-      LoadBalancerArn: !Ref 'PublicLoadBalancer'
-      # The port on which the load balancer is listening.
-      Port: 80
-      Protocol: HTTP
-
-  # This is an IAM role which authorizes ECS to manage resources on your
-  # account on your behalf, such as updating your load balancer with the
-  # details of where your containers are, so that traffic can reach your
-  # containers.
-  ECSRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Effect: Allow
-            Principal:
-              Service: [ecs.amazonaws.com]
-            Action: ['sts:AssumeRole']
-      Path: /
-      Policies:
-        - PolicyName: ecs-service
-          PolicyDocument:
-            Statement:
-              - Effect: Allow
-                Action:
-                  # Rules which allow ECS to attach network interfaces to instances
-                  # on your behalf in order for awsvpc networking mode to work right
-                  - 'ec2:AttachNetworkInterface'
-                  - 'ec2:CreateNetworkInterface'
-                  - 'ec2:CreateNetworkInterfacePermission'
-                  - 'ec2:DeleteNetworkInterface'
-                  - 'ec2:DeleteNetworkInterfacePermission'
-                  - 'ec2:Describe*'
-                  - 'ec2:DetachNetworkInterface'
-
-                  # Rules which allow ECS to update load balancers on your behalf
-                  # with the information sabout how to send traffic to your containers
-                  - 'elasticloadbalancing:DeregisterInstancesFromLoadBalancer'
-                  - 'elasticloadbalancing:DeregisterTargets'
-                  - 'elasticloadbalancing:Describe*'
-                  - 'elasticloadbalancing:RegisterInstancesWithLoadBalancer'
-                  - 'elasticloadbalancing:RegisterTargets'
-                Resource: '*'
-
-  # =====================
-  # Logs from containers
-  # =====================
   CloudWatchLogsGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Ref AWS::StackName
       RetentionInDays: 7
 
-  # The task definition. This is a simple metadata description of what
-  # container to run, and what resource requirements it has.
   MongoTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
       Family: mongo-task
       Cpu: 256
       Memory: 512
+      # requires NetworkConfiguration in service description
+      # NetworkMode: awsvpc
+      NetworkMode: host
       ContainerDefinitions:
         # mongo express finds mongo with this container name
         - Name: mongo
@@ -312,6 +172,7 @@ Resources:
           Image: registry.hub.docker.com/library/mongo:latest
           PortMappings:
             - ContainerPort: 27017
+              HostPort: 27017
           Environment:
             - Name: MONGO_INITDB_ROOT_USERNAME
               Value: root
@@ -328,176 +189,48 @@ Resources:
           Image: registry.hub.docker.com/library/mongo-express:latest
           PortMappings:
             - ContainerPort: 8081
+              HostPort: 8081
               Protocol: http
           Environment:
             - Name: ME_CONFIG_MONGODB_ADMINUSERNAME
               Value: root
             - Name: ME_CONFIG_MONGODB_ADMINPASSWORD
               Value: password
-            - Name: ME_CONFIG_SITE_BASEURL
-              Value: /mongo/
-          Links:
-            - mongo
+            - Name: ME_CONFIG_MONGODB_SERVER
+              Value: localhost
+#            - Name: ME_CONFIG_SITE_BASEURL
+#              Value: /mongo/
+          #Links:
+          #  - mongo
           LogConfiguration:
             LogDriver: awslogs
             Options:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
-
   MongoService:
     Type: AWS::ECS::Service
-    DependsOn: LoadBalancerRule
     Properties:
       ServiceName: mongo-service
-      Cluster: !Ref 'ECSCluster'
+      Cluster: !Ref 'EcsCluster'
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 75
       DesiredCount: 1
+#      NetworkConfiguration:
+#        AwsvpcConfiguration:
+#          Subnets:
+#            - !Ref PubSubnet
+#          SecurityGroups: [!Ref 'EcsHostSecurityGroup']
       TaskDefinition: !Ref 'MongoTaskDefinition'
-      LoadBalancers:
-        - ContainerName: mongo-express
-          ContainerPort: 8081
-          TargetGroupArn: !Ref 'MongoTargetGroup'
-
-  MongoTargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckIntervalSeconds: 6
-      HealthCheckPath: /mongo/
-      HealthCheckProtocol: HTTP
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 2
-      Name: mongo-target-group
-      # The port on which the target is listening
-      Port: 8081
-      Protocol: HTTP
-      UnhealthyThresholdCount: 2
-      VpcId: !Ref 'VPC'
-
-  # Create a rule on the load balancer for routing traffic to the target group
-  MongoLoadBalancerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref 'MongoTargetGroup'
-          Type: 'forward'
-      Conditions:
-        - Field: path-pattern
-          Values: ["/mongo/*"]
-      ListenerArn: !Ref 'PublicLoadBalancerListener'
-      Priority: 2
-
-  # ==================
-  # Framework UI
-  # ==================
-  FrameworkUiTaskDefinition:
-    Type: AWS::ECS::TaskDefinition
-    Properties:
-      Family: framework-ui-task
-      Cpu: 256
-      Memory: 512
-      ContainerDefinitions:
-        - Name: framework-ui
-          Cpu: 256
-          Memory: 512
-          Image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-framework-ui-dev:latest
-          PortMappings:
-            - ContainerPort: 8080
-              Protocol: HTTP
-          LogConfiguration:
-            LogDriver: awslogs
-            Options:
-              awslogs-group: !Ref CloudWatchLogsGroup
-              awslogs-region: !Ref AWS::Region
-
-  FrameworkUiService:
-    Type: AWS::ECS::Service
-    DependsOn: LoadBalancerRule
-    Properties:
-      ServiceName: framework-ui-service
-      Cluster: !Ref 'ECSCluster'
-      DeploymentConfiguration:
-        MaximumPercent: 200
-        MinimumHealthyPercent: 75
-      DesiredCount: 1
-      TaskDefinition: !Ref 'FrameworkUiTaskDefinition'
-      LoadBalancers:
-        - ContainerName: framework-ui
-          ContainerPort: 8080
-          TargetGroupArn: !Ref 'FrameworkUiTargetGroup'
-
-  FrameworkUiTargetGroup:
-    Type: AWS::ElasticLoadBalancingV2::TargetGroup
-    Properties:
-      HealthCheckIntervalSeconds: 6
-      HealthCheckPath: /
-      HealthCheckProtocol: HTTP
-      HealthCheckTimeoutSeconds: 5
-      HealthyThresholdCount: 2
-      Name: framework-ui-target-group
-      # The port on which the target is listening
-      Port: 8080
-      Protocol: HTTP
-      UnhealthyThresholdCount: 2
-      VpcId: !Ref 'VPC'
-
-  # Create a rule on the load balancer for routing traffic to the target group
-  LoadBalancerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref 'FrameworkUiTargetGroup'
-          Type: 'forward'
-      Conditions:
-        - Field: path-pattern
-          Values: ["/framework/*"]
-      ListenerArn: !Ref 'PublicLoadBalancerListener'
-      Priority: 1
 
 
-
-# These are the values output by the CloudFormation template. Be careful
-# about changing any of them, because of them are exported with specific
-# names so that the other task related CF templates can use them.
 Outputs:
-  ClusterName:
-    Description: The name of the ECS cluster
-    Value: !Ref 'ECSCluster'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ClusterName' ] ]
-  ExternalUrl:
-    Description: The url of the external load balancer
-    Value: !Join ['', ['http://', !GetAtt 'PublicLoadBalancer.DNSName']]
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ExternalUrl' ] ]
-  ECSRole:
-    Description: The ARN of the ECS role
-    Value: !GetAtt 'ECSRole.Arn'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'ECSRole' ] ]
-  PublicListener:
-    Description: The ARN of the public load balancer's Listener
-    Value: !Ref PublicLoadBalancerListener
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PublicLoadBalancerListener' ] ]
-  VPCId:
-    Description: The ID of the VPC that this stack is deployed in
-    Value: !Ref 'VPC'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'VPCId' ] ]
-  PublicSubnetOne:
-    Description: Public subnet one
-    Value: !Ref 'PublicSubnetOne'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PublicSubnetOne' ] ]
-  PublicSubnetTwo:
-    Description: Public subnet two
-    Value: !Ref 'PublicSubnetTwo'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'PublicSubnetTwo' ] ]
-  EcsHostSecurityGroup:
-    Description: A security group used to allow containers to receive traffic
-    Value: !Ref 'EcsHostSecurityGroup'
-    Export:
-      Name: !Join [ ':', [ !Ref 'AWS::StackName', 'EcsHostSecurityGroup' ] ]
+  EcsInstanceAutoScalingGroupName:
+    Description: Auto Scaling Group Name for ECS Instances
+    Value: !Ref EcsInstanceAutoScalingGroup
+  UsedByECSCreateCluster:
+    Description: Flag used by ECS Create Cluster Wizard
+    Value: 'true'
+  TemplateVersion:
+    Description: The version of the template used by Create Cluster Wizard
+    Value: '2.0.0'
