#50 this is fargate with awsvpc network, can reach mongo express via its public network address and port but mongo express still can not find mongo db

--- a/.aws/ecs/dev/peof-dev-env.yml
+++ b/.aws/ecs/dev/peof-dev-env.yml
@@ -1,10 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Parameters:
-#  StackName:
-#    Type: String
-#    Default: peof-dev-env
-#    Description: The name of the parent Fargate networking stack that you created. Necessary
-#      to locate and reference resources created by that stack.
   ECSAMI:
     Description: AMI ID
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
@@ -139,40 +134,62 @@ Resources:
       MinSize: '1'
       MaxSize: '3'
       DesiredCapacity: '1'
-      Tags:
-        -
-          Key: Name
-          Value: !Sub "ECS Instance - ${AWS::StackName}"
-          PropagateAtLaunch: 'true'
-        -
-          Key: Description
-          Value: "This instance is the part of the Auto Scaling group which was created through ECS Console"
-          PropagateAtLaunch: 'true'
 
   CloudWatchLogsGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Ref AWS::StackName
-      RetentionInDays: 7
+      RetentionInDays: 1
 
+  EcsTaskExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service: [ecs-tasks.amazonaws.com]
+            Action: ['sts:AssumeRole']
+      Path: /
+      Policies:
+        - PolicyName: AmazonECSTaskExecutionRolePolicy
+          PolicyDocument:
+            Statement:
+              - Effect: Allow
+                Action:
+                  # Allow the ECS Tasks to download images from ECR
+                  - 'ecr:GetAuthorizationToken'
+                  - 'ecr:BatchCheckLayerAvailability'
+                  - 'ecr:GetDownloadUrlForLayer'
+                  - 'ecr:BatchGetImage'
+
+                  # Allow the ECS tasks to upload logs to CloudWatch
+                  - 'logs:CreateLogStream'
+                  - 'logs:PutLogEvents'
+                Resource: '*'
   MongoTaskDefinition:
     Type: AWS::ECS::TaskDefinition
+    DependsOn: EcsInstanceAutoScalingGroup
     Properties:
       Family: mongo-task
+      TaskRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
+      ExecutionRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
       Cpu: 256
       Memory: 512
       # requires NetworkConfiguration in service description
-      # NetworkMode: awsvpc
-      NetworkMode: host
+      NetworkMode: awsvpc
+      #NetworkMode: host
+      RequiresCompatibilities:
+        - FARGATE
       ContainerDefinitions:
         # mongo express finds mongo with this container name
-        - Name: mongo
+        - Name: mongo-db
           Cpu: 128
           Memory: 256
           Image: registry.hub.docker.com/library/mongo:latest
           PortMappings:
             - ContainerPort: 27017
-              HostPort: 27017
+#              HostPort: 27017
           Environment:
             - Name: MONGO_INITDB_ROOT_USERNAME
               Value: root
@@ -183,54 +200,52 @@ Resources:
             Options:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: 'mongo'
         - Name: mongo-express
           Cpu: 128
           Memory: 256
           Image: registry.hub.docker.com/library/mongo-express:latest
           PortMappings:
             - ContainerPort: 8081
-              HostPort: 8081
-              Protocol: http
+#              HostPort: 8081
+#              Protocol: http
           Environment:
             - Name: ME_CONFIG_MONGODB_ADMINUSERNAME
               Value: root
             - Name: ME_CONFIG_MONGODB_ADMINPASSWORD
               Value: password
             - Name: ME_CONFIG_MONGODB_SERVER
-              Value: localhost
+              Value: 127.0.0.1
 #            - Name: ME_CONFIG_SITE_BASEURL
 #              Value: /mongo/
-          #Links:
-          #  - mongo
+#          Links:
+#            - mongo
           LogConfiguration:
             LogDriver: awslogs
             Options:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: 'mongo-express'
+
   MongoService:
     Type: AWS::ECS::Service
     Properties:
-      ServiceName: mongo-service
+      ServiceName: mongo
       Cluster: !Ref 'EcsCluster'
+      LaunchType: FARGATE
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 75
       DesiredCount: 1
-#      NetworkConfiguration:
-#        AwsvpcConfiguration:
-#          Subnets:
-#            - !Ref PubSubnet
-#          SecurityGroups: [!Ref 'EcsHostSecurityGroup']
       TaskDefinition: !Ref 'MongoTaskDefinition'
-
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          AssignPublicIp: 'ENABLED'
+          Subnets:
+            - !Ref PubSubnet
+          SecurityGroups: [!Ref 'EcsHostSecurityGroup']
 
 Outputs:
   EcsInstanceAutoScalingGroupName:
     Description: Auto Scaling Group Name for ECS Instances
     Value: !Ref EcsInstanceAutoScalingGroup
-  UsedByECSCreateCluster:
-    Description: Flag used by ECS Create Cluster Wizard
-    Value: 'true'
-  TemplateVersion:
-    Description: The version of the template used by Create Cluster Wizard
-    Value: '2.0.0'
