#50 works with fargate. mongo is initialized and express logs in

--- a/.aws/ecs/dev/peof-dev-env.yml
+++ b/.aws/ecs/dev/peof-dev-env.yml
@@ -178,23 +178,22 @@ Resources:
       Memory: 512
       # requires NetworkConfiguration in service description
       NetworkMode: awsvpc
-      #NetworkMode: host
       RequiresCompatibilities:
         - FARGATE
       ContainerDefinitions:
-        # mongo express finds mongo with this container name
         - Name: mongo-db
           Cpu: 128
           Memory: 256
-          Image: registry.hub.docker.com/library/mongo:latest
+          Image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-mongodb-dev:latest
           PortMappings:
             - ContainerPort: 27017
-#              HostPort: 27017
           Environment:
             - Name: MONGO_INITDB_ROOT_USERNAME
               Value: root
             - Name: MONGO_INITDB_ROOT_PASSWORD
               Value: password
+            - Name: MONGO_INITDB_DATABASE
+              Value: admin
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -204,22 +203,18 @@ Resources:
         - Name: mongo-express
           Cpu: 128
           Memory: 256
-          Image: registry.hub.docker.com/library/mongo-express:latest
+          Image: mongo-express:latest
           PortMappings:
             - ContainerPort: 8081
-#              HostPort: 8081
-#              Protocol: http
           Environment:
             - Name: ME_CONFIG_MONGODB_ADMINUSERNAME
               Value: root
             - Name: ME_CONFIG_MONGODB_ADMINPASSWORD
               Value: password
             - Name: ME_CONFIG_MONGODB_SERVER
-              Value: 127.0.0.1
-#            - Name: ME_CONFIG_SITE_BASEURL
-#              Value: /mongo/
-#          Links:
-#            - mongo
+              Value: localhost
+            - Name: MONGO_URI
+              Value: mongodb://localhost:27017/
           LogConfiguration:
             LogDriver: awslogs
             Options:
