--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -33,6 +33,7 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_INITDB_DATABASE: admin
     depends_on:
       - "logstash"
     logging:
