--- a/.docker/mongoDb/Dockerfile
+++ b/.docker/mongoDb/Dockerfile
@@ -1,7 +1,3 @@
 FROM mongo:4.0
 
-ENV MONGO_INITDB_ROOT_USERNAME root
-ENV MONGO_INITDB_ROOT_PASSWORD password
-ENV MONGO_INITDB_DATABASE admin
-
-#ADD mongo-init.js /docker-entrypoint-initdb.d/
+ADD mongo-init.js /docker-entrypoint-initdb.d/
