#50 rabbit also works

--- a/.aws/ecs/dev/peof-dev-env.yml
+++ b/.aws/ecs/dev/peof-dev-env.yml
@@ -132,8 +132,8 @@ Resources:
         - !Ref PubSubnet
       LaunchConfigurationName: !Ref EcsInstanceLaunchConfiguration
       MinSize: '1'
-      MaxSize: '3'
-      DesiredCapacity: '1'
+      MaxSize: '4'
+      DesiredCapacity: '2'
 
   CloudWatchLogsGroup:
     Type: AWS::Logs::LogGroup
@@ -167,11 +167,11 @@ Resources:
                   - 'logs:CreateLogStream'
                   - 'logs:PutLogEvents'
                 Resource: '*'
-  MongoTaskDefinition:
+  MongoDbTaskDefinition:
     Type: AWS::ECS::TaskDefinition
     DependsOn: EcsInstanceAutoScalingGroup
     Properties:
-      Family: mongo-task
+      Family: mongodb-task
       TaskRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
       ExecutionRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
       Cpu: 256
@@ -181,7 +181,7 @@ Resources:
       RequiresCompatibilities:
         - FARGATE
       ContainerDefinitions:
-        - Name: mongo-db
+        - Name: mongo
           Cpu: 128
           Memory: 256
           Image: 332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-mongodb-dev:latest
@@ -199,7 +199,7 @@ Resources:
             Options:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
-              awslogs-stream-prefix: 'mongo'
+              awslogs-stream-prefix: 'mongodb'
         - Name: mongo-express
           Cpu: 128
           Memory: 256
@@ -221,18 +221,69 @@ Resources:
               awslogs-group: !Ref CloudWatchLogsGroup
               awslogs-region: !Ref AWS::Region
               awslogs-stream-prefix: 'mongo-express'
-
-  MongoService:
+  MongoDbService:
     Type: AWS::ECS::Service
     Properties:
-      ServiceName: mongo
+      ServiceName: mongodb
       Cluster: !Ref 'EcsCluster'
       LaunchType: FARGATE
       DeploymentConfiguration:
         MaximumPercent: 200
         MinimumHealthyPercent: 75
       DesiredCount: 1
-      TaskDefinition: !Ref 'MongoTaskDefinition'
+      TaskDefinition: !Ref 'MongoDbTaskDefinition'
+      NetworkConfiguration:
+        AwsvpcConfiguration:
+          AssignPublicIp: 'ENABLED'
+          Subnets:
+            - !Ref PubSubnet
+          SecurityGroups: [!Ref 'EcsHostSecurityGroup']
+
+  RabbitMqTaskDefinition:
+    Type: AWS::ECS::TaskDefinition
+    DependsOn: EcsInstanceAutoScalingGroup
+    Properties:
+      Family: rabbitmq-task
+      TaskRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
+      ExecutionRoleArn: !GetAtt 'EcsTaskExecutionRole.Arn'
+      Cpu: 256
+      Memory: 512
+      # requires NetworkConfiguration in service description
+      NetworkMode: awsvpc
+      RequiresCompatibilities:
+        - FARGATE
+      ContainerDefinitions:
+        - Name: rabbitmq
+          Cpu: 128
+          Memory: 256
+          Image: rabbitmq:3-management
+          PortMappings:
+            - ContainerPort: 15672
+            - ContainerPort: 5672
+          Environment:
+            - Name: RABBITMQ_DEFAULT_USER
+              Value: guest
+            - Name: RABBITMQ_DEFAULT_PASS
+              Value: guest
+            - Name: RABBITMQ_DEFAULT_VHOST
+              Value: /
+          LogConfiguration:
+            LogDriver: awslogs
+            Options:
+              awslogs-group: !Ref CloudWatchLogsGroup
+              awslogs-region: !Ref AWS::Region
+              awslogs-stream-prefix: 'rabbitmq'
+  RabbitMqService:
+    Type: AWS::ECS::Service
+    Properties:
+      ServiceName: rabbitmq
+      Cluster: !Ref 'EcsCluster'
+      LaunchType: FARGATE
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 75
+      DesiredCount: 1
+      TaskDefinition: !Ref 'RabbitMqTaskDefinition'
       NetworkConfiguration:
         AwsvpcConfiguration:
           AssignPublicIp: 'ENABLED'
