--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -153,7 +153,7 @@ jobs:
             TAG="$(git rev-parse --short HEAD)"
             IMAGE=332197038802.dkr.ecr.eu-central-1.amazonaws.com/peof-<< parameters.source_root >>-dev
             cd ~/project/<< parameters.source_root >>
-            source <(aws ecr get-login --region eu-central-1 --no-include-email)
+            $(aws ecr get-login --region eu-central-1 --no-include-email)
             docker build -t ${IMAGE}:${TAG} .
             docker push ${IMAGE}:${TAG}
 
