--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ fabric.properties
 .idea/caches/build_file_checksums.ser
 
 *.log
+
+/.idea/misc.xml
+/.idea/vcs.xml
+/.idea/inspectionProfiles/Project_Default.xml
