--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/paulvitic/peof/issues"
   },
-  "homepage": "https://github.com/paulvitic/peof#readme"
+  "homepage": "https://github.com/paulvitic/peof#readme",
+  "devDependencies": {
+    "@types/node": "^12.11.7",
+    "tslint": "^5.20.0",
+    "typescript": "^3.6.4"
+  }
 }
