--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -4,6 +4,7 @@
   "description": "portfolio management backend",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/main.js",
     "test": "test"
   },
   "repository": {
@@ -18,6 +19,9 @@
   "homepage": "https://github.com/paulvitic/peof#readme",
   "devDependencies": {
     "@types/node": "^12.11.7",
+    "dependency-cruiser": "^5.2.2",
+    "madge": "^3.4.4",
+    "precinct": "^6.1.2",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4"
   }
