#52 jira issues collected

--- a/agile/tsconfig.json
+++ b/agile/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
     "lib": [
-      "es2018"
+      "es2018",
+      "webworker",
+      "es2020.string"
     ],
     "typeRoots": [
       "./node_modules/@types",
