--- a/agile/package.json
+++ b/agile/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "winston": "^3.2.1",
-    "node-cron": "^2.0.3"
+    "node-cron": "^2.0.3",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -26,6 +27,7 @@
     "dependency-cruiser": "^5.3.1",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
-    "@types/node-cron": "^2.0.2"
+    "@types/node-cron": "^2.0.2",
+    "@types/request": "^2.48.3"
   }
 }
