--- a/agile/package.json
+++ b/agile/package.json
@@ -19,15 +19,17 @@
     "express": "^4.17.1",
     "winston": "^3.2.1",
     "node-cron": "^2.0.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/node": "^12.11.7",
-    "dependency-cruiser": "^5.3.1",
+    "@types/node-cron": "^2.0.2",
+    "@types/request": "^2.48.3",
+    "dependency-cruiser": "^5.4.0",
     "tslint": "^5.20.0",
     "typescript": "^3.6.4",
-    "@types/node-cron": "^2.0.2",
-    "@types/request": "^2.48.3"
+    "@types/shortid": "^0.0.29"
   }
 }
