--- a/agile/package.json
+++ b/agile/package.json
@@ -19,8 +19,7 @@
     "express": "^4.17.1",
     "winston": "^3.2.1",
     "node-cron": "^2.0.3",
-    "request": "^2.88.0",
-    "shortid": "^2.2.15"
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -29,7 +28,6 @@
     "@types/request": "^2.48.3",
     "dependency-cruiser": "^5.4.0",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
-    "@types/shortid": "^0.0.29"
+    "typescript": "^3.6.4"
   }
 }
