--- a/agile/package.json
+++ b/agile/package.json
@@ -23,11 +23,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^24.0.23",
     "@types/node": "^12.11.7",
     "@types/node-cron": "^2.0.2",
     "@types/request": "^2.48.3",
-    "dependency-cruiser": "^5.4.0",
+    "typescript": "^3.6.4",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "dependency-cruiser": "^5.4.0",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0"
   }
 }
