--- a/agile/package.json
+++ b/agile/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "winston": "^3.2.1",
     "node-cron": "^2.0.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "pg": "^7.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
@@ -27,6 +28,7 @@
     "@types/node": "^12.11.7",
     "@types/node-cron": "^2.0.2",
     "@types/request": "^2.48.3",
+    "@types/pg": "^7.11.2",
     "typescript": "^3.6.4",
     "tslint": "^5.20.0",
     "dependency-cruiser": "^5.4.0",
